--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -23,9 +23,11 @@
     font-size: 1.2em;
     color: #fff;
 }
+.flex > ul > p {
+    color: red;
+}
 
 .flex > ul > p:hover {
-    color: red;
     cursor: pointer;
 }
 
