--- a/src/pages/Projetos/Projetos.module.css
+++ b/src/pages/Projetos/Projetos.module.css
@@ -38,7 +38,7 @@
     margin: 1em;
     display: flex;
     flex-flow: column nowrap;
-    align-items: left;
+    justify-content: space-around;
     padding: 1em;
     transition: all 0.2s ease-in-out;
 }
