--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -10,24 +10,25 @@
     padding: 1em 5em;
 }
 
-.flex > ul {
+.flex > div {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
 }
 
 .link,
-.flex > ul > p {
+.flex > div > p {
     text-decoration: none;
     margin-inline: 1em;
     font-size: 1.2em;
     color: #fff;
 }
-.flex > ul > p {
+.flex > div > p {
     color: red;
+    margin-right: 0 !important;
 }
 
-.flex > ul > p:hover {
+.flex > div > p:hover {
     cursor: pointer;
 }
 
@@ -35,3 +36,112 @@
     transition: ease-in-out 0.5s all;
     color: #ffbb33;
 }
+
+#abrir,
+#fechar {
+    display: none;
+}
+
+#abrir:hover,
+#fechar:hover {
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1273px) {
+    .flex {
+        padding-inline: 2.4em;
+    }
+
+    #logo {
+        width: 55px;
+    }
+}
+
+@media screen and (max-width: 841px) {
+    .flex {
+        padding-inline: 2.1em;
+    }
+}
+
+/*NavBar responsivo*/
+@media screen and (max-width: 805px) {
+    .flex > div > a,
+    .flex > div > p {
+        display: none;
+    }
+
+    .responsivo {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 3;
+    }
+
+    .responsivo #abrir,
+    .responsivo > .flex > a {
+        display: none;
+    }
+
+    .responsivo > .flex {
+        width: inherit;
+        height: inherit;
+        justify-content: center;
+    }
+
+    .responsivo > .flex > div {
+        display: flex;
+        flex-flow: column;
+    }
+
+    .responsivo > .flex > div > a,
+    .responsivo > .flex > div > p {
+        display: inline;
+        margin-inline: 0;
+        margin-block: 5px;
+        font-size: 30px;
+    }
+
+    .responsivo #fechar {
+        display: inline;
+        position: absolute;
+        right: 3%;
+        top: 2%;
+        color: white;
+        font-size: 3.3em;
+    }
+
+    #abrir {
+        display: inline;
+        color: white;
+        font-size: 2.8em;
+    }
+
+    .flex {
+        padding-block: 0.7em;
+    }
+}
+
+@media screen and (max-width: 505px) {
+    .responsivo > .flex > div > a,
+    .responsivo > .flex > div > p {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 493px) {
+    #logo {
+        width: 45px;
+    }
+
+    #abrir {
+        font-size: 2.4em;
+    }
+}
+
+@media screen and (max-width: 405px) {
+    .flex {
+        padding-inline: 1.1em;
+    }
+}
+
