--- a/src/pages/Projetos/Projetos.module.css
+++ b/src/pages/Projetos/Projetos.module.css
@@ -284,6 +284,10 @@
         grid-template-columns: 100%;
     }
 
+    #nome {
+        font-size: .9em;
+    }
+
 }
 
 @media screen and (max-width: 383px) {
