--- a/src/pages/Projeto/Projeto.module.css
+++ b/src/pages/Projeto/Projeto.module.css
@@ -89,7 +89,7 @@
     margin-top: 9px;
     font-weight: 500;
     align-self: baseline;
-    padding: .5em 1em;
+    padding: 0.5em 1em;
 }
 
 .btn:hover {
@@ -175,37 +175,36 @@
 
     #botao {
         margin-top: 0;
-        margin-bottom: .5em;
-
+        margin-bottom: 0.5em;
     }
 
     .project_container > ul {
-        margin-block: .7em;
+        margin-block: 0.7em;
     }
 
+    .removeBtn {
+        font-size: 14px !important;
+    }
 }
 
 @media screen and (max-width: 424px) {
     .project_container > ul > li {
-        font-size: .8em;
+        font-size: 0.8em;
     }
 
     .btn {
         display: none;
     }
 
-    #nome {
-        font-size: 1.2em;
-    }
-
     #botao {
         font-size: 14px;
+    }
+
+    #nome {
+        font-size: 1.1em;
     }
 
     #div > div {
         width: 95%;
     }
-
-
-
 }
