--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -71,7 +71,7 @@
     }
 
     .responsivo {
-        position: absolute;
+        position: sticky;
         top: 0;
         width: 100%;
         height: 100vh;
