--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,29 +1,59 @@
 #footer {
-    background-color: #222;
-    text-align: center;
-    color: #fff;
-}
-
-#footer p {
-    padding-bottom: 0.5em;
-    font-size: 13px;
-}
-
-#flex {
     display: flex;
     flex-flow: row nowrap;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
+    width: 100%;
+    background-color: #222;
+    padding-inline: 5em;
+    padding-block: 1em;
+    color: white;
+    margin-top: 1em;
 }
 
-#flex li {
-    list-style-type: none;
-    margin-inline: 1em;
-    margin-top: 1.1em;
-    margin-bottom: 1em;
-}
-
-#flex li a:hover {
-    transition: all 0.3s ease-in-out;
+#footer > p > span {
     color: #ffbb33;
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+#footer > div {
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+#footer > div > a {
+    margin-left: 4px;
+    color: #ffbb33;
+}
+
+@media screen and (max-width: 1120px) {
+    #footer p,
+    #footer a {
+        font-size: 0.8em;
+    }
+}
+
+@media screen and (max-width: 814px) {
+    #footer {
+        padding-inline: 3%;
+    }
+}
+
+@media screen and (max-width: 676px) {
+    #footer {
+        padding-inline: 1em;
+    }
+}
+
+@media screen and (max-width: 468px) {
+    #footer {
+        flex-flow: column;
+        padding-inline: 0;
+        padding-block: .5em;
+    }
+
+    #footer > div {
+        margin-top: 8px;
+    }
 }
